tests/fixtures/invalid/len_float.py
# Cannot call len() with Float
x = len(1.0)
